# addons

./: .env.template  Cargo.toml  README.md
common/: Cargo.toml
elm-frontend/elm-stuff/0.19.1/: Main.elmi  Main.elmo  Page-Register.elmi  Page-Register.elmo  Route.elmi  Route.elmo
elm-frontend/src/: Main.elm  Route.elm
elm-frontend/src/Page/: Register.elm
frontend/: .eslintcache
frontend/src/: App.tsx
frontend/src/components/: Addon.tsx
server/: Cargo.toml  Makefile.toml
server/api/: api.yaml
server/migrations/2021-02-05-223254_create_addons_table/: down.sql  up.sql
server/migrations/2021-02-07-212117_create_accounts_table/: up.sql
server/src/: environment.rs  error.rs  main.rs
server/src/account/: filters.rs  mod.rs
server/src/filters/: accounts.rs  addon.rs  addons.rs  mod.rs
server/src/handlers/: accounts.rs  addon.rs  addons.rs  mod.rs
server/src/models/: accounts.rs  addon.rs  addons.rs  mod.rs
server/src/sql/: accounts.rs  addons.rs  sql.rs
