[package]
name = "server"
version = "0.1.0"
authors = ["Iulian Gabriel Radu <iulian.radu67@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }
hyper = "0.14"

jsonwebtoken = "7.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

listenfd = "0.3"

thiserror = "1"
anyhow = "1.0"

tracing = "0.1"
tracing-subscriber = "0.2"

dotenv = "0.15.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

sqlx = { git = "https://github.com/launchbadge/sqlx", features = [ "runtime-tokio-rustls", "postgres", "uuid" ] }

shrinkwraprs = "0.3"
unicode-width = "0.1"

rust-argon2 = "0.8"